force-app/main/default/objects/Case/fields/Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_Date__c</fullName>
    <label>Flight End Date</label>
    <type>Date</type>
</CustomField>