force-app/main/default/objects/Case/fields/Flight_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Start_Date__c</fullName>
    <label>Flight Start Date</label>
    <type>Date</type>
</CustomField>