force-app/main/default/objects/Case/fields/Missing_Fields__c.field-meta.xml
<CustomField>
    <fullName>Missing_Fields__c</fullName>
    <label>Missing Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>