force-app/main/default/objects/Case/fields/Optimization_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Action_Type__c</fullName>
    <label>Optimization Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Optimization_Action_Type</valueSetName>
    </valueSet>
</CustomField>