force-app/main/default/objects/Case/fields/Optimization_Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Advertiser__c</fullName>
    <label>Optimization Advertiser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>