force-app/main/default/objects/Case/fields/Optimization_Current_Pacing_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Current_Pacing_Percentage__c</fullName>
    <label>Optimization Current Pacing Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>