force-app/main/default/objects/Case/fields/Optimization_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Event_Type__c</fullName>
    <label>Optimization Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Optimization_Event_Type</valueSetName>
    </valueSet>
</CustomField>