force-app/main/default/objects/Case/fields/Optimization_Health__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Health__c</fullName>
    <label>Optimization Health</label>
    <length>40</length>
    <type>Text</type>
</CustomField>