force-app/main/default/objects/Case/fields/Optimization_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Line_Item_Id__c</fullName>
    <label>Optimization Line Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>