force-app/main/default/objects/Case/fields/Optimization_Pacing_Adjustment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Pacing_Adjustment_Pct__c</fullName>
    <label>Optimization Pacing Adjustment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>