force-app/main/default/objects/Case/fields/Requested_Budget__c.field-meta.xml
<CustomField>
    <fullName>Requested_Budget__c</fullName>
    <label>Requested Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>