force-app/main/default/objects/Case/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>OMS API</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>