force-app/main/default/objects/Case/recordTypes/Campaign_Request.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Request</fullName>
    <active>true</active>
    <businessProcess>Campaign_Request_Support_Process</businessProcess>
    <label>Campaign Request</label>
</RecordType>